# search-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: agent-workflow.mdc  architecture.mdc  communication.mdc  experiments-patterns.mdc  fastapi-conventions.mdc  git-conventions.mdc  llm-agent-integration.mdc  logging.mdc  motor-mongodb.mdc  opensearch-patterns.mdc  project-overview.mdc  score-normalization.mdc  testing.mdc  tooling.mdc
.cursor/rules/local/: README.md
.cursor/templates/: context-doc.md  developer-profile.mdc
docs/: developer-setup.md  session-log.md
docs/decisions/: ADR-0001-architecture.md  ADR-0002-evaluation-framework.md  ADR-0003-connection-profiles.md  ADR-0004-exception-hierarchy.md  ADR-0005-search-mode-enum.md  ADR-0006-domain-agnostic-platform.md  README.md
docs/en/: README.md  experiments.md  getting-started.md  metrics.md  profiles.md
docs/ru/: README.md  experiments.md  getting-started.md  metrics.md  profiles.md
scripts/: run_unit_tests.py  seed.py  semantic_search_demo.py
src/: main.py
src/modules/agents/: api.py
src/modules/experiments/: api.py
src/modules/experiments/application/: experiments_service.py
src/modules/experiments/domain/: models.py
src/modules/experiments/infrastructure/: repository.py
src/modules/experiments/presentation/: router.py
src/modules/profiles/: __init__.py  api.py
src/modules/profiles/application/: __init__.py  active_context.py  profiles_service.py
src/modules/profiles/domain/: __init__.py  models.py
src/modules/profiles/infrastructure/: __init__.py  opensearch_registry.py  repository.py
src/modules/profiles/presentation/: __init__.py  deps.py  router.py
src/modules/search/: api.py
src/modules/search/application/: eval_service.py  indexing_service.py  search_params.py  search_service.py
src/modules/search/infrastructure/: repository.py
src/modules/search/presentation/: document_router.py  document_schemas.py  eval_router.py  router.py  schemas.py
src/shared/: exceptions.py  search_mode.py
src/shared/infrastructure/: embedding.py  logging.py  mongodb.py  opensearch.py
src/shared/infrastructure/embedding/: __init__.py  bedrock.py  factory.py  local_sentence_transformers.py  types.py
static/: index.html
static/css/: app.css
static/js/: app.js
tests/: conftest.py
tests/integration/: conftest.py  test_search_smoke.py
tests/unit/: conftest.py  test_dotenv_loading.py
tests/unit/modules/experiments/application/: test_experiments_service.py
tests/unit/modules/experiments/domain/: test_models.py
tests/unit/modules/experiments/infrastructure/: test_repository.py
tests/unit/modules/profiles/application/: test_profiles_service.py
tests/unit/modules/profiles/domain/: test_models.py
tests/unit/modules/search/: conftest.py
tests/unit/modules/search/application/: test_eval_service.py  test_indexing_service.py  test_search_params.py  test_search_service.py  test_search_service_helpers.py
tests/unit/modules/search/infrastructure/: test_repository.py
