[project]
name = "search-lab"
version = "0.1.0"
description = "FastAPI search service with OpenSearch and LLM agent integration"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "opensearch-py>=2.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "sentence-transformers>=5.3.0",
    "aiofiles>=25.1.0",
    "motor>=3.7.1",
    "boto3>=1.42.78",
    "requests-aws4auth>=1.3.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "pre-commit>=4.0.0",
    "faker>=40.11.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ASYNC",# flake8-async (no sync I/O in async functions)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Runtime imports required for Motor/FastAPI DI and cross-layer embedding config
"src/modules/profiles/application/profiles_service.py" = ["TC002"]
"src/modules/profiles/infrastructure/repository.py" = ["TC002"]
"src/modules/profiles/presentation/deps.py" = ["TC002"]
"src/shared/infrastructure/embedding/bedrock.py" = ["TC001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -m \"not integration\""
markers = [
    "integration: requires live OpenSearch/MongoDB (docker-compose)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
